resources/assets/stylesheets/highcontrast.scss
@import "mixins.scss";
$darkgray: #30343b;
$lightgray: #e7ebf1;

$medium-gray: #cccccc;
$darkergray: #444444;

$contrast-blue: #2849d8;
$contrast-blue-medium: #2D2C64;
$contrast-blue-dark: #14246c;
$contrast-red: #ff0000;
$medium-red: #c80000;
$contrast-yellow: #ffff00;
$lightyellow: #fffa90;

/* General contrasts */
body #scroll-to-top {
    background-color: $black;

    &:hover {
        background-color: $black;
    }
}

body.fixed #navigation-level-1-items li > a,
#header-links > ul > li > a {
    color: $white !important;
    text-decoration: underline !important;
}

div.index_container div.index_main {
    background-color: hsla(0, 0%, 100%, 1);
}

.js .drag-and-drop {
    background-color: $white;
    color: $black;
    border: 1px solid $black;
}

.boxed-grid {
    a {
        background-color: $white;
        border: 1px solid $black;

        p {
            color: $black;
        }

        img {
            opacity: 0;
        }

        &:hover {
            background-color: $black;

            p, h3 {
                color: $white;
            }
        }
    }

}

#tour_tip {
    background-color: $black;
}

.ui-widget-content {
    color: $black;
}

/* HEADER */
#responsive-menu,
#header-links {
    background-color: $black;

}

#site-title {
    background-color: $black;
    color: $white;
}

#navigation-level-1 {
    background-color: $white;
    border-bottom: 1px solid $black !important;
}

body.fixed #navigation-level-1-items {
    background-color: $black;

    li  a {
        color: $white;
    }

    li:hover {
        background-color: $white;

        a {
            color: $black !important;
            img {
                filter: brightness(0);
            }

        }
    }

}

body:not(.fixed) #navigation-level-1-items > li.active:after,
#tabs > li.current:after {
    background-color: $black;
}

#tabs li,
#navigation-level-2,
#current-page-structure #navigation-level-2 .tabs_wrapper {
    background-color: $white;
}

#tabs li.current a,
#tabs li:hover a,
body:not(.fixed) #navigation-level-1-items li.active .navtitle,
body:not(.fixed) #navigation-level-1-items li:hover .navtitle {
    color: $contrast-blue;
}

/* RESPONSIVE NAVIGATION AND SIDEBAR */
#responsive-navigation {
    background-color: $black;
    background-image: unset;
    border-right: 6px solid $black;

    ul > li {
        background-color: rgba(150,150,150) !important;

        > div > a {
            color: $black !important;
        }

        > ul > li {
            background-color: rgba(255,255,255) !important;

            > div > a {
                color: $black !important;
            }

        }
    }

}

.responsive-display #sidebar {
    background-color: $black;
    background-image: unset;
    border-left: 6px solid $black;

}

/* MESSAGE BOXES */
div.messagebox_exception {
    color: $medium-red !important;
    background-color: $white !important;
}

/* DIALOG */
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-titlebar {
    background-color: $black;
    color: $white;
}

ul.message-options > li a img {
    filter: brightness(0);
}

/* BUTTONS */
.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button,
button.button,
a.button,
.fc .fc-button-group .fc-button {
    border-color: $black !important;
    color: $black !important;
}

.ui-dialog.ui-widget.ui-widget-content .ui-dialog-buttonpane .ui-button:hover,
button.button:hover,
a.button:hover,
.fc .fc-button-group .fc-button:hover,
.fc .fc-button-group .fc-button-active,
.fc-button-primary:not(:disabled).fc-button-active {
    background-color: $black;
    color: $white !important;
}

button.button[disabled],
button.button[disabled]:hover {
    background-color: $white;
    color: $black !important;
    cursor: not-allowed;
}

/* SIDEBAR AND WIDGETS */

#sidebar .sidebar-image {
    background-image: unset;
    background: $black;
}

.studip-widget .widget-header,
.sidebar-widget-header {
    background-color: $black !important;
    color: $white !important;
}

.sidebar-widget-content ul li form,
.sidebar-widget-content form,
.-widget-content form {
    border: unset !important;
}

.studip-widget,
.studip-widget:hover {
    border: 2px solid $black;

}

// hover over sidebar list elements ...
.sidebar-widget-content > ul > li > a {
    color: $black;

    &:hover {
        background-color: $black;
        color: $white;
    }
}
// .. except for "Ansichten"
.sidebar-widget-content > ul.sidebar-views > li > a:hover {
    background-color: transparent;
    color: $contrast-red;

}

.widget-links button,
.widget-links.sidebar-views > li.active a,
.widget-links.sidebar-views > li.active button {
    color: $black;
}
.widget-links.sidebar-views > li:hover button,
.widget-links.sidebar-views > li:hover a {
    color: $black;
    background-color: $medium-gray;
}


.widget-links.sidebar-navigation > li.active {
    background-color: $black !important;
    color: $white !important;
    box-shadow: unset;

}


.widget-links.sidebar-navigation > li.active,
.widget-links.sidebar-navigation > li.active a {

    &::before,
    &::after {
        border-left-color: $black;
    }
}


// "Ansichten" need to be white
.widget-links.sidebar-views > li.active {
    background-color: $medium-gray;
    box-shadow: unset;
    border-top: 2px solid $black;
    border-bottom: 2px solid $black;

    a {
        color: $black;
    }

    &:hover {
        background-color: $darkergray;

        a {
            color: $white;
        }
    }
}

.widget-links.sidebar-views > li.active:before {
    border-left: 10px solid $black;
}

.widget-links.sidebar-views > li.active:after {
    border-left-color: $medium-gray;
}

.sidebar-search input[type=submit] {
    background-color: $black;
}
/* ... */

